muestra correctamente el dropdown de usuario en pantallas grandes ajustando estilos de .collapse

--- a/resources/css/appcustom.css
+++ b/resources/css/appcustom.css
@@ -124,9 +124,7 @@ body {
 }
 
 .collapse:not(.show) {
-    display: block;
-    height: 0;
-    overflow: hidden;
+    display: none;
 }
 
 .collapse.show {
